fixed login dialog issues on smaller screen

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -124,15 +124,14 @@
 }
 
 .decorator-text{
-    content: "OR";
-    background-color: white;
-    position: absolute;
-    color: lightgray;
-    font-weight: bold;
-    left: 46.5%;
-    top: 52.5%;
-    width: 2rem;
-    padding: 1%;
+   content: "OR";
+   background-color: white;
+   color: lightgray;
+   font-weight: bold;
+   margin-left: 50%;
+   width: 2rem;
+   padding: 0.25em;
+   transform: translate(-50%, -50%);
 }
 .pointer {
     cursor: pointer;
@@ -143,16 +142,17 @@
     margin-left: 4%;
     font-size: 15px;
     line-height: 1vmin;
-    margin-top: 3.5%;
+    margin-top: 1rem;
     font-weight: 700;
     transition: all 400ms;
 }
 
 
 .inp-block:hover .box-label {
-    font-weight: 500;
-    font-size: 14px;
-    margin-top: 1%;
+   font-weight: 500;
+   font-size: 14px;
+   margin-top: 0.5rem; 
+   margin-left: 1.25rem;
 }
 
  .inp-block:hover .box{
@@ -160,9 +160,10 @@
  }
 
  .active .box-label{
-    font-weight: 500;
-    font-size: 14px;
-    margin-top: 1%;
+   font-weight: 500;
+   font-size: 14px;
+   margin-top: 0.5rem; 
+   margin-left: 1.25rem;
  }
 
  .border-show .box{
@@ -170,7 +171,7 @@
  }
 
  .inp{
-    padding-left: 1rem;
+    padding-left: 1.25rem;
     padding-top: 0.5rem;
  }
 
